--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.card{
+    @apply bg-white rounded-md overflow-hidden mr-3 my-3 border-blue-400 border relative
+}
+
+.badge{
+    @apply border border-blue-500 text-blue-600 rounded absolute top-0 mt-3 p-2 text-sm
+}
